# Selfer

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  Dockerfile  MIGRATION_PRIORITY_REPORT.md  MIGRATION_REPORT.md  README.md  TEST_SUCCESS.md  autonomy_test.txt  clean_output.txt  docker-compose.yml  package-lock.json  package.json  plan.md  planner_output.json  pyproject.toml  readme.md  rebrand.mjs  run_selfer_tests.js  selfer.mjs  selfer.tsx  setup.py  simulate_planner.js  task-requirements.txt  test_loop.ts  test_ollama.ts  test_output.txt  test_results.txt  test_user_query.js  tsconfig.json  tsdown.config.ts  user_query_log.txt  verify_all_agents.js  verify_queries.js  vitest.config.ts
.github/workflows/: ci.yml
.selfer/: config.json  map.json  memory.db  memory.json  repo_session.json  session.json
.selfer/chroma_db/: chroma.sqlite3
.selfer/sessions/: 775b1b03.json  b6de14f8.json
results/: Agent_Tests_latest.json  Orchestrator_Tests_2026-03-11T08-30-24-951Z.json  Orchestrator_Tests_latest.json
results/logs/: errors_Orchestrator_Tests_2026-03-11T08-12-32-445Z.json
samples/: sample_chunked.json
scripts/: convert-md-imports.cjs  extract-deps.cjs  find-missing-local-imports.cjs  generate-migration-report.cjs  generate-missing-local-stubs.cjs  generate-stub-package-exports.cjs
selfer/: main.py  pyproject.toml
skills/: api.md  backend.md  cli.md  database.md  deployment.md  frontend.md  git.md  master.md  testing.md  typescript.md  web.md
src/: PermissionManager.ts  ThinkingCore.ts  __init__.py  entry.ts  index.ts  new_file.ts  runtime.ts  utils.ts  version.ts
src-reference/: QueryEngine.ts  commands.ts  context.ts  interactiveHelpers.tsx  main.tsx  node-prelude.ts  query.ts  setup.ts  tasks.ts  tools.ts
src-reference/assistant/: sessionDiscovery.js
src-reference/bootstrap/: state.ts
src-reference/bridge/: bridgeEnabled.ts  bridgeMain.ts  (+2 more)
test_multi_tool/: README.md  config.json
test_workspace_e2e/: index.ts  package.json
tests/: ContextGuard.test.ts  EditParser.test.ts  ModelRegistry.test.ts  RetryHandler.test.ts  TokenCounter.test.ts  multi_tool_test.ts  test_autonomy.js  test_autonomy.ts  test_integration.ts  verify_all_agents.js  verify_logic.ts  verify_queries.js
types/: global.d.ts
(+1388 files in other folders)
