[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selfer"
version = "0.1.0"
description = "Selfer Project"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.3.18",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=0.3.6",
    "langchain>=0.3.19",
    "langgraph>=1.0.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.10",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.38",
]

[project.scripts]
selfer = "selfer.cli.main:cli"
