[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selfer"
version = "0.1.0"
description = "Selfer — Local-First Autonomous Developer Agent"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai", "agent", "llm", "developer-tools", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.8",
    "chromadb>=0.4.24",
    "langchain-chroma>=0.1.0",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.3.18",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=0.3.6",
    "langchain>=0.3.19",
    "langgraph>=1.0.10",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.10",
    "rich>=13.9.4",
    "setuptools>=75.8.0",
    "sqlalchemy>=2.0.38",
    "sentence-transformers>=5.2.3",
]

[project.scripts]
selfer = "selfer.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
